[project]
name = "libertai-monitoring"
version = "0.1.0"
description = ""
authors = [
    { name = "LibertAI team", email = "hello@libertai.io" }
]
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "aleph-sdk-python (>=2.0.5,<3.0.0)",
    "libertai-utils (>=0.0.15,<0.0.16)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.8"

